tests/NormalTests/paczka1/fuzzy1/41648296.err
Error in line 1: DQw8q S435 19,7
Error in line 9: cVMva9v S642 90,5
Error in line 4: A457 S642 80,3
Error in line 31: cVMva9v S435 27,1
Error in line 34: DQw8q S435 95,8
